force-app/main/default/objects/PurchasingOrder__c/fields/Detail__c.field-meta.xml
<CustomField>
    <fullName>Detail__c</fullName>
    <label>PURCHASING DETAIL</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>