force-app/main/default/objects/PurchasingOrder__c/fields/InvoiceNumberFromVendor__c.field-meta.xml
<CustomField>
    <fullName>InvoiceNumberFromVendor__c</fullName>
    <label>INVOICE NUMBER FROM VENDOR</label>
    <length>50</length>
    <type>Text</type>
</CustomField>