force-app/main/default/objects/PurchasingOrder__c/fields/InvoiceReceivedDate__c.field-meta.xml
<CustomField>
    <fullName>InvoiceReceivedDate__c</fullName>
    <label>PURCHASING INVOICE RECEIVED DATE</label>
    <type>Date</type>
</CustomField>