force-app/main/default/objects/PurchasingOrder__c/fields/PurchasingOrderName__c.field-meta.xml
<CustomField>
    <fullName>PurchasingOrderName__c</fullName>
    <label>PURCHASING ORDER NAME</label>
    <length>255</length>
    <type>Text</type>
</CustomField>