force-app/main/default/objects/PurchasingOrder__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>PURCHASING STATUS</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Registered</fullName>
            </value>
            <value>
                <fullName>Confirmed</fullName>
            </value>
            <value>
                <fullName>Payment Processing</fullName>
                <label>Payment processing</label>
            </value>
            <value>
                <fullName>Payment Settled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>