force-app/main/default/objects/PurchasingOrder__c/fields/TotalAmountInclTax__c.field-meta.xml
<CustomField>
    <fullName>TotalAmountInclTax__c</fullName>
    <label>TOTAL PURCHASING AMOUNT INCL TAX(USD)</label>
    <summarizedField>PurchasingInvoice__c.TotalAmount__c</summarizedField>
    <summaryFilterItems>
        <field>PurchasingInvoice__c.Currency__c</field>
        <operation>equals</operation>
        <value>USD</value>
    </summaryFilterItems>
    <summaryForeignKey>PurchasingInvoice__c.PurchasingOrder__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>