force-app/main/default/objects/PurchasingOrder__c/fields/TotalAmountInclTaxLocal__c.field-meta.xml
<CustomField>
    <fullName>TotalAmountInclTaxLocal__c</fullName>
    <inlineHelpText>Roll-Up Sum of Amount of Purchasing include Tax(Local) in Purchasing Invoice Object.</inlineHelpText>
    <label>TOTAL PURCHASING AMOUNT INCL TAX(LOCAL)</label>
    <summarizedField>PurchasingInvoice__c.AmountIncludedTaxLocal__c</summarizedField>
    <summaryFilterItems>
        <field>PurchasingInvoice__c.Currency__c</field>
        <operation>notEqual</operation>
        <value>USD</value>
    </summaryFilterItems>
    <summaryForeignKey>PurchasingInvoice__c.PurchasingOrder__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>