force-app/main/default/objects/PurchasingOrder__c/fields/TotalPaidAmount__c.field-meta.xml
<CustomField>
    <fullName>TotalPaidAmount__c</fullName>
    <inlineHelpText>Roll-up Sum of Total Amount Paid-Purchasing(USD) in Purchasing Invoice Object.</inlineHelpText>
    <label>TOTAL AMOUNT PAID-PURCHASING(USD)</label>
    <summarizedField>PurchasingInvoice__c.PaidAmount__c</summarizedField>
    <summaryFilterItems>
        <field>PurchasingInvoice__c.Currency__c</field>
        <operation>equals</operation>
        <value>USD</value>
    </summaryFilterItems>
    <summaryForeignKey>PurchasingInvoice__c.PurchasingOrder__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>