force-app/main/default/objects/PurchasingOrder__c/fields/TotalPaidAmountLocal__c.field-meta.xml
<CustomField>
    <fullName>TotalPaidAmountLocal__c</fullName>
    <inlineHelpText>Roll-up Sum of Amount Paid-Purchasing(Local) in Purchasing Invoice Object.</inlineHelpText>
    <label>TOTAL AMOUNT PAID-PURCHASING(LOCAL)</label>
    <summarizedField>PurchasingInvoice__c.PaidAmountLocal__c</summarizedField>
    <summaryFilterItems>
        <field>PurchasingInvoice__c.Currency__c</field>
        <operation>notEqual</operation>
        <value>USD</value>
    </summaryFilterItems>
    <summaryForeignKey>PurchasingInvoice__c.PurchasingOrder__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>