force-app/main/default/objects/PurchasingOrder__c/fields/TotalPaidAmountLocalText__c.field-meta.xml
<CustomField>
    <fullName>TotalPaidAmountLocalText__c</fullName>
    <label>TOTAL AMOUNT PAID-PURCHASING(LOCAL)-TEXT</label>
    <length>600</length>
    <type>LongTextArea</type>
</CustomField>