force-app/main/default/objects/PurchasingOrder__c/fields/TotalPOAmountIncltaxText__c.field-meta.xml
<CustomField>
    <fullName>TotalPOAmountIncltaxText__c</fullName>
    <label>TOTAL P/O AMOUNT INCL TAX(LOCAL)-TEXT</label>
    <length>600</length>
    <type>LongTextArea</type>
</CustomField>