force-app/main/default/objects/PurchasingOrder__c/fields/TotalUnpaidBalance__c.field-meta.xml
<CustomField>
    <fullName>TotalUnpaidBalance__c</fullName>
    <inlineHelpText>Roll-up Sum of Unpaid Balance of Purchasing(USD) in Purchasing Invoice Object.</inlineHelpText>
    <label>TOTAL UNPAID PURCHASING BALANCE(USD)</label>
    <summarizedField>PurchasingInvoice__c.UnpaidBalance__c</summarizedField>
    <summaryFilterItems>
        <field>PurchasingInvoice__c.Currency__c</field>
        <operation>equals</operation>
        <value>USD</value>
    </summaryFilterItems>
    <summaryForeignKey>PurchasingInvoice__c.PurchasingOrder__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>