force-app/main/default/objects/PurchasingOrder__c/recordTypes/LockedPurchasingOrder.recordType-meta.xml
<RecordType>
    <fullName>LockedPurchasingOrder</fullName>
    <active>true</active>
    <label>Locked Purchasing Order</label>
</RecordType>