force-app/main/default/objects/PurchasingOrder__c/recordTypes/PurchasingOrder.recordType-meta.xml
<RecordType>
    <fullName>PurchasingOrder</fullName>
    <active>true</active>
    <label>Purchasing Order</label>
</RecordType>