force-app/main/default/objects/PurchasingOrder__c/validationRules/DUE_DATE_later_than_RECEIVED_DAT.validationRule-meta.xml
<ValidationRule>
    <fullName>DUE_DATE_later_than_RECEIVED_DAT</fullName>
    <active>true</active>
    <errorConditionFormula>InvoiceReceivedDate__c  &gt;  PaymentDueDate__c</errorConditionFormula>
    <errorDisplayField>PaymentDueDate__c</errorDisplayField>
    <errorMessage>PAYMENT DUE DATE must be later than PURCHASING INVOICE RECEIVED DATE.</errorMessage>
</ValidationRule>