force-app/main/default/objects/PurchasingOrder__c/validationRules/End_Date_Must_Be_Later_Than_Start_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>End_Date_Must_Be_Later_Than_Start_Date</fullName>
    <active>true</active>
    <errorConditionFormula>StartDate__c  &gt;  EndDate__c</errorConditionFormula>
    <errorDisplayField>EndDate__c</errorDisplayField>
    <errorMessage>End Date Must be later than Start Date.</errorMessage>
</ValidationRule>