force-app/main/default/objects/PurchasingOrder__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>PurchasingOrderName__c</columns>
    <columns>Status__c</columns>
    <columns>Vendor__c</columns>
    <columns>Detail__c</columns>
    <columns>InvoiceReceivedDate__c</columns>
    <columns>PaymentDueDate__c</columns>
    <columns>StartDate__c</columns>
    <columns>EndDate__c</columns>
    <columns>ContractNumber__c</columns>
    <columns>InvoiceNumberFromVendor__c</columns>
    <columns>TotalAmountInclTaxLocal__c</columns>
    <columns>TotalAmountInclTax__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>